@@ -1,3 +1,5 @@
+2005/9/27 -- released version 20050927_trunk
+
 2005/9/26 -- released version 20050926_trunk
 
 * fixed FPing probe so it doesn't report 100% loss when the first ping is lost
